# pulp

./: .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  pulp-updater.json  release.config.js  tailwind.config.js  tsconfig.json  vite.config.tauri.js  vite.config.tauri.js.timestamp-1708119003623-636a5cd904905.mjs  vite.config.ts
.github/workflows/: main.yml
migrations/20231026123714_init/: migration.sql
scripts/: constants.js
src/: App.tsx  index.css  index.tsx
src-tauri/: .env.dist  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/prisma/: dev.db-journal  schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/prisma/migrations/20230217143834_init/: migration.sql
src-tauri/prisma/migrations/20230217155316_init/: migration.sql
src-tauri/prisma/migrations/20230725155311_analyse_file/: migration.sql
src-tauri/prisma/migrations/20231026072155_init/: migration.sql
src-tauri/prisma/migrations/20231026092321_optional_field_analyzed/: migration.sql
src-tauri/prisma/migrations/20240605105234_audio_metadata/: migration.sql
src-tauri/prisma/migrations/20240610073409_bitrate/: migration.sql
src-tauri/prisma/migrations/20240627073307_init/: migration.sql
src-tauri/src/: cmds.rs  main.rs  prismaMainClient.rs
src-tauri/src/utils/: app.rs  audio_utils.rs  extractor_music.rs  mod.rs
src/contexts/: store.tsx
src/lib/: nanopath.ts
tools/: bump-tauri-version.js  prisma-prepare-schema.js  pulp-updater.json  semantic-release-export-data.js
(+75 files in other folders)
