[package]
name = "pulp"
version = "1.0.4"
description = "Audio Sample Manager"
authors = ["Bazalp"]
license = ""
repository = "https://github.com/bazalp/pulp"
default-run = "app"
edition = "2021"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all", "updater"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.4", default-features = false, features = ["migrations", "sqlite"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0.37"
walkdir = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]


[workspace]
resolver = "2"
members = [
    "prisma-cli"
]
